# atlecta_api

./: .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 3867c89bae17_added_field_name_to_sportobject_table.py  3add8a864151_deleted_test_field_and_use_alter_in_.py  3e0e58d88673_edited_tags_field_in_spot_object_table.py  c584e737e905_created_sports_tables.py  cc013f745f9a_chaged_sports_objects_tags_to_sport_.py  ea9487ab8c22_changed_name_of_user_table_to_user_.py  fbb3ed88f0ab_created_user_tables.py
src/: config.py  database.py  main.py  repository.py  unitofwork.py  utils.py
src/auth/: auth.py  manager.py  models.py  router.py  utils.py
src/sports/: dependencies.py  models.py  repository.py  router.py  schemas.py  services.py  utils.py
tests/: conftest.py  ne_test.py  test_example.py  test_sport_create.py
